Telegram_bot/telegram-bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegram-service
  namespace: germes-the-bot
spec:
  selector:
    app.kubernetes.io/name: telegram-bot
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP
